feat(Kardex): enhance KardexServiceTest to include user details and improve test coverage